# autotests_triangle

./: LICENSE  README.md  pyproject.toml
src/: config.py  driver.py  main.py
src/pages/: triangle.py
src/tests/: triangle.py
