[tool.poetry]
name = "autotests_triangle"
version = "0.1.0"
description = "Autotests for LearnQA Trainer «Triangles»"
authors = ["Aleksey Burmistrov <took.burmistrov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
